changed opening external websites to (open in new tab)

--- a/dashboard.html
+++ b/dashboard.html
@@ -88,9 +88,11 @@
 				<div class="setting-pop-up-content">
 					* color-blind means "red/green color-blind" here<br /><br />
 					* Color selection for "color-blind friendly" option is from this website:
-					<a href="https://www.nceas.ucsb.edu/sites/default/files/2022-06/Colorblind%20Safe%20Color%20Schemes.pdf"
-						>Colorblind Safe Color Schemes</a
-					>
+					<a
+						href="https://www.nceas.ucsb.edu/sites/default/files/2022-06/Colorblind%20Safe%20Color%20Schemes.pdf"
+						target="_blank">
+						Colorblind Safe Color Schemes
+					</a>
 				</div>
 			</div>
 		</div>
