--- a/workout.html
+++ b/workout.html
@@ -81,9 +81,11 @@
 				<div class="setting-pop-up-content">
 					* color-blind means "red/green color-blind" here<br /><br />
 					* Color selection for "color-blind friendly" option is from this website:
-					<a href="https://www.nceas.ucsb.edu/sites/default/files/2022-06/Colorblind%20Safe%20Color%20Schemes.pdf"
-						>Colorblind Safe Color Schemes</a
-					>
+					<a
+						href="https://www.nceas.ucsb.edu/sites/default/files/2022-06/Colorblind%20Safe%20Color%20Schemes.pdf"
+						target="_blank">
+						Colorblind Safe Color Schemes
+					</a>
 				</div>
 			</div>
 		</div>
@@ -105,14 +107,16 @@
 
 		<div class="outerFieldsContainer">
 			<div class="fieldsContainer">
-				<div class="leftFields">
-			</div>
-			<div class = "rightFields">
-				<div class="rightExerciseContainer"> </div>
+				<div class="leftFields"></div>
+				<div class="rightFields">
+					<div class="rightExerciseContainer"></div>
 					<div class="commentContainer">
 						<label class="commentLabel">Personal Comment:</label>
-						<textarea type = text class="commentBox" placeholder="Write your personal comment about today's workout"></textarea>
-       				</div>
+						<textarea
+							type="text"
+							class="commentBox"
+							placeholder="Write your personal comment about today's workout"></textarea>
+					</div>
 				</div>
 				<!-- <div class="setControls">
 					<div id="addSet" class="setButton">+</div>
@@ -511,252 +515,251 @@ submitBtn.addEventListener('click', () => {
 		</script> -->
 
 		<script>
-  // Parse JSON embedded in the HTML
-  const exerciseJSON = document.getElementById('exerciseData').textContent;
-  const exercises = JSON.parse(exerciseJSON).exercises;
+			// Parse JSON embedded in the HTML
+			const exerciseJSON = document.getElementById('exerciseData').textContent;
+			const exercises = JSON.parse(exerciseJSON).exercises;
 
-  const exerciseInput = document.getElementById('searchInput');
-  const exerciseSearch = document.getElementById('exerciseSearch');
-  const leftFields = document.querySelector('.leftFields');
-  const rightExerciseContainer = document.querySelector('.rightExerciseContainer');
+			const exerciseInput = document.getElementById('searchInput');
+			const exerciseSearch = document.getElementById('exerciseSearch');
+			const leftFields = document.querySelector('.leftFields');
+			const rightExerciseContainer = document.querySelector('.rightExerciseContainer');
 
-  // Display today's date
-  const dateLabel = document.querySelector('.dateLabel');
-  const today = new Date();
-  const formattedDate = today.toLocaleDateString('en-US', {
-    year: 'numeric',
-    month: 'long',
-    day: 'numeric'
-  });
-  dateLabel.textContent = `Today's workout: ${formattedDate}`;
+			// Display today's date
+			const dateLabel = document.querySelector('.dateLabel');
+			const today = new Date();
+			const formattedDate = today.toLocaleDateString('en-US', {
+				year: 'numeric',
+				month: 'long',
+				day: 'numeric',
+			});
+			dateLabel.textContent = `Today's workout: ${formattedDate}`;
 
-  // Search bar behavior
-  exerciseInput.addEventListener('focus', () => {
-    exerciseInput.placeholder = '';
-    if (exerciseInput.value.trim() !== '' && exerciseSearch.innerHTML.trim() !== '') {
-      exerciseSearch.style.display = 'block';
-    }
-  });
+			// Search bar behavior
+			exerciseInput.addEventListener('focus', () => {
+				exerciseInput.placeholder = '';
+				if (exerciseInput.value.trim() !== '' && exerciseSearch.innerHTML.trim() !== '') {
+					exerciseSearch.style.display = 'block';
+				}
+			});
 
-  exerciseInput.addEventListener('blur', () => {
-    if (exerciseInput.value === '') {
-      exerciseInput.placeholder = 'Search an exercise to add to workout';
-    }
-  });
+			exerciseInput.addEventListener('blur', () => {
+				if (exerciseInput.value === '') {
+					exerciseInput.placeholder = 'Search an exercise to add to workout';
+				}
+			});
 
-  exerciseInput.addEventListener('input', () => {
-    const query = exerciseInput.value.toLowerCase().trim();
-    if (!query) {
-      exerciseSearch.style.display = 'none';
-      exerciseSearch.innerHTML = '';
-      return;
-    }
-    const filtered = exercises.filter(ex => ex.name.toLowerCase().includes(query));
-    displayResults(filtered);
-  });
+			exerciseInput.addEventListener('input', () => {
+				const query = exerciseInput.value.toLowerCase().trim();
+				if (!query) {
+					exerciseSearch.style.display = 'none';
+					exerciseSearch.innerHTML = '';
+					return;
+				}
+				const filtered = exercises.filter((ex) => ex.name.toLowerCase().includes(query));
+				displayResults(filtered);
+			});
 
-  function displayResults(results) {
-    exerciseSearch.innerHTML = '';
-    if (results.length === 0) {
-      exerciseSearch.innerHTML = '<p class="noResults">No exercise matches your search</p>';
-    } else {
-      results.forEach(ex => {
-        const div = document.createElement('div');
-        div.classList.add('exerciseResult');
-        div.textContent = `${ex.name} (${ex.type})`;
-        div.addEventListener('click', () => {
-          addExerciseBox(ex.name, ex.type);
-          exerciseInput.value = '';
-          exerciseSearch.innerHTML = '';
-          exerciseSearch.style.display = 'none';
-          exerciseInput.placeholder = 'Search an exercise to add to workout';
-        });
-        exerciseSearch.appendChild(div);
-      });
-    }
-    exerciseSearch.style.display = 'block';
-  }
+			function displayResults(results) {
+				exerciseSearch.innerHTML = '';
+				if (results.length === 0) {
+					exerciseSearch.innerHTML = '<p class="noResults">No exercise matches your search</p>';
+				} else {
+					results.forEach((ex) => {
+						const div = document.createElement('div');
+						div.classList.add('exerciseResult');
+						div.textContent = `${ex.name} (${ex.type})`;
+						div.addEventListener('click', () => {
+							addExerciseBox(ex.name, ex.type);
+							exerciseInput.value = '';
+							exerciseSearch.innerHTML = '';
+							exerciseSearch.style.display = 'none';
+							exerciseInput.placeholder = 'Search an exercise to add to workout';
+						});
+						exerciseSearch.appendChild(div);
+					});
+				}
+				exerciseSearch.style.display = 'block';
+			}
 
-  document.addEventListener('click', (event) => {
-    const isClickInside = exerciseInput.contains(event.target) || exerciseSearch.contains(event.target);
-    if (!isClickInside) exerciseSearch.style.display = 'none';
-  });
+			document.addEventListener('click', (event) => {
+				const isClickInside = exerciseInput.contains(event.target) || exerciseSearch.contains(event.target);
+				if (!isClickInside) exerciseSearch.style.display = 'none';
+			});
 
-  // Add exercises
-  let firstExerciseType = null;
+			// Add exercises
+			let firstExerciseType = null;
 
-  function addExerciseBox(exerciseName, exerciseType) {
-    const wrapper = document.createElement('div');
-    wrapper.classList.add('exerciseWrapper');
+			function addExerciseBox(exerciseName, exerciseType) {
+				const wrapper = document.createElement('div');
+				wrapper.classList.add('exerciseWrapper');
 
-    const box = document.createElement('div');
-    const exerciseTitle = document.createElement('div');
-    const x = document.createElement('div');
+				const box = document.createElement('div');
+				const exerciseTitle = document.createElement('div');
+				const x = document.createElement('div');
 
-    exerciseTitle.classList.add('exerciseTitle');
-    exerciseTitle.textContent = exerciseName;
-    box.appendChild(exerciseTitle);
-    box.classList.add('exerciseBox');
+				exerciseTitle.classList.add('exerciseTitle');
+				exerciseTitle.textContent = exerciseName;
+				box.appendChild(exerciseTitle);
+				box.classList.add('exerciseBox');
 
-    x.classList.add('removeExercise');
-    x.textContent = 'X';
-    box.appendChild(x);
+				x.classList.add('removeExercise');
+				x.textContent = 'X';
+				box.appendChild(x);
 
-    x.addEventListener('click', () => wrapper.remove());
+				x.addEventListener('click', () => wrapper.remove());
 
-    const labelsContainer = document.createElement('div');
-    labelsContainer.classList.add('labelsContainer');
+				const labelsContainer = document.createElement('div');
+				labelsContainer.classList.add('labelsContainer');
 
-    const typeLower = exerciseType.toLowerCase();
-    let targetColumn;
+				const typeLower = exerciseType.toLowerCase();
+				let targetColumn;
 
-    if (!firstExerciseType) {
-      firstExerciseType = typeLower;
-      targetColumn = leftFields;
-    } else {
-      targetColumn = (typeLower === firstExerciseType) ? leftFields : rightExerciseContainer;
-    }
+				if (!firstExerciseType) {
+					firstExerciseType = typeLower;
+					targetColumn = leftFields;
+				} else {
+					targetColumn = typeLower === firstExerciseType ? leftFields : rightExerciseContainer;
+				}
 
-    if (typeLower.includes('resistance')) {
-      const setsContainer = document.createElement('div');
-      setsContainer.classList.add('setsContainer');
-      labelsContainer.appendChild(setsContainer);
+				if (typeLower.includes('resistance')) {
+					const setsContainer = document.createElement('div');
+					setsContainer.classList.add('setsContainer');
+					labelsContainer.appendChild(setsContainer);
 
-      for (let i = 1; i <= 3; i++) addSetToContainer(setsContainer, i);
+					for (let i = 1; i <= 3; i++) addSetToContainer(setsContainer, i);
 
-      const setControls = document.createElement('div');
-      setControls.classList.add('setControls');
+					const setControls = document.createElement('div');
+					setControls.classList.add('setControls');
 
-      const addSet = document.createElement('div');
-      addSet.classList.add('setButton');
-      addSet.textContent = '+';
+					const addSet = document.createElement('div');
+					addSet.classList.add('setButton');
+					addSet.textContent = '+';
 
-      const removeSet = document.createElement('div');
-      removeSet.classList.add('setButton');
-      removeSet.textContent = '−';
+					const removeSet = document.createElement('div');
+					removeSet.classList.add('setButton');
+					removeSet.textContent = '−';
 
-      const setLabel = document.createElement('label');
-      setLabel.classList.add('setControlLabel');
-      setLabel.textContent = 'sets';
+					const setLabel = document.createElement('label');
+					setLabel.classList.add('setControlLabel');
+					setLabel.textContent = 'sets';
 
-      setControls.append(addSet, removeSet, setLabel);
-      labelsContainer.appendChild(setControls);
+					setControls.append(addSet, removeSet, setLabel);
+					labelsContainer.appendChild(setControls);
 
-      addSet.addEventListener('click', () => {
-        const count = setsContainer.querySelectorAll('.setRow').length;
-        addSetToContainer(setsContainer, count + 1);
-      });
-      removeSet.addEventListener('click', () => {
-        const setRows = setsContainer.querySelectorAll('.setRow');
-        if (setRows.length > 1) setRows[setRows.length - 1].remove();
-      });
+					addSet.addEventListener('click', () => {
+						const count = setsContainer.querySelectorAll('.setRow').length;
+						addSetToContainer(setsContainer, count + 1);
+					});
+					removeSet.addEventListener('click', () => {
+						const setRows = setsContainer.querySelectorAll('.setRow');
+						if (setRows.length > 1) setRows[setRows.length - 1].remove();
+					});
+				} else if (typeLower.includes('cardio')) {
+					const labels = ['Distance (km)', 'Time (min)', 'Avg Speed (min/km)'];
+					labels.forEach((text) => {
+						const wrapperDiv = document.createElement('div');
+						wrapperDiv.classList.add('dataWrapper');
 
-    } else if (typeLower.includes('cardio')) {
-      const labels = ['Distance (km)', 'Time (min)', 'Avg Speed (min/km)'];
-      labels.forEach(text => {
-        const wrapperDiv = document.createElement('div');
-        wrapperDiv.classList.add('dataWrapper');
+						const label = document.createElement('label');
+						label.classList.add('cardioLabel');
+						label.textContent = text;
 
-        const label = document.createElement('label');
-        label.classList.add('cardioLabel');
-        label.textContent = text;
+						const input = document.createElement('input');
+						input.type = 'text';
+						input.placeholder = 'enter value';
+						input.classList.add('cardioInput');
 
-        const input = document.createElement('input');
-        input.type = 'text';
-        input.placeholder = 'enter value';
-        input.classList.add('cardioInput');
+						wrapperDiv.append(label, input);
+						labelsContainer.appendChild(wrapperDiv);
+					});
+				}
 
-        wrapperDiv.append(label, input);
-        labelsContainer.appendChild(wrapperDiv);
-    	});
-    }
+				wrapper.append(box, labelsContainer);
+				targetColumn.appendChild(wrapper);
+			}
 
-		wrapper.append(box, labelsContainer);
-		targetColumn.appendChild(wrapper);
-  	}
+			function addSetToContainer(container, setNumber) {
+				const setRow = document.createElement('div');
+				setRow.classList.add('setRow');
 
-  	function addSetToContainer(container, setNumber) {
-    const setRow = document.createElement('div');
-    setRow.classList.add('setRow');
+				const setLabel = document.createElement('div');
+				setLabel.classList.add('setLabel');
+				setLabel.textContent = `Set ${setNumber}`;
 
-    const setLabel = document.createElement('div');
-    setLabel.classList.add('setLabel');
-    setLabel.textContent = `Set ${setNumber}`;
+				const repsLabel = document.createElement('label');
+				repsLabel.textContent = 'Reps';
+				repsLabel.classList.add('inputLabel');
 
-    const repsLabel = document.createElement('label');
-    repsLabel.textContent = 'Reps';
-    repsLabel.classList.add('inputLabel');
+				const repsInput = document.createElement('input');
+				repsInput.type = 'number';
+				repsInput.min = 0;
+				repsInput.placeholder = '--';
+				repsInput.classList.add('smallInput');
 
-    const repsInput = document.createElement('input');
-    repsInput.type = 'number';
-    repsInput.min = 0;
-    repsInput.placeholder = '--';
-    repsInput.classList.add('smallInput');
+				const weightLabel = document.createElement('label');
+				weightLabel.textContent = 'Weight';
+				weightLabel.classList.add('inputLabel');
 
-    const weightLabel = document.createElement('label');
-    weightLabel.textContent = 'Weight';
-    weightLabel.classList.add('inputLabel');
+				const weightInput = document.createElement('input');
+				weightInput.type = 'number';
+				weightInput.min = 0;
+				weightInput.placeholder = '--';
+				weightInput.classList.add('smallInput');
 
-    const weightInput = document.createElement('input');
-    weightInput.type = 'number';
-    weightInput.min = 0;
-    weightInput.placeholder = '--';
-    weightInput.classList.add('smallInput');
+				const unitLabel = document.createElement('label');
+				unitLabel.textContent = 'kg';
+				unitLabel.classList.add('inputLabel');
 
-    const unitLabel = document.createElement('label');
-    unitLabel.textContent = 'kg';
-    unitLabel.classList.add('inputLabel');
+				setRow.append(setLabel, repsLabel, repsInput, weightLabel, weightInput, unitLabel);
+				container.appendChild(setRow);
+			}
 
-    setRow.append(setLabel, repsLabel, repsInput, weightLabel, weightInput, unitLabel);
-    container.appendChild(setRow);
-  }
+			/*** click submit to save data into session storage **/
+			const submitBtn = document.querySelector('.submitBtn');
+			submitBtn.addEventListener('click', () => {
+				const exerciseWrappers = document.querySelectorAll('.exerciseWrapper');
+				const exercisesData = [];
 
-		/*** click submit to save data into session storage **/
-		const submitBtn = document.querySelector('.submitBtn');
-		submitBtn.addEventListener('click', () => {
-			const exerciseWrappers = document.querySelectorAll('.exerciseWrapper');
-			const exercisesData = [];
+				exerciseWrappers.forEach((wrapper) => {
+					const box = wrapper.querySelector('.exerciseBox');
+					const exerciseName = box.querySelector('.exerciseTitle').textContent;
+					const labelsContainer = wrapper.querySelector('.labelsContainer');
+					const type = wrapper.querySelector('.setRow') ? 'resistance' : 'cardio';
 
-			exerciseWrappers.forEach(wrapper => {
-			const box = wrapper.querySelector('.exerciseBox');
-			const exerciseName = box.querySelector('.exerciseTitle').textContent;
-			const labelsContainer = wrapper.querySelector('.labelsContainer');
-			const type = wrapper.querySelector('.setRow') ? 'resistance' : 'cardio';
+					if (type === 'resistance') {
+						const sets = [];
+						wrapper.querySelectorAll('.setRow').forEach((row) => {
+							const reps = row.querySelector('input[type="number"]:nth-of-type(1)').value || 0;
+							const weight = row.querySelector('input[type="number"]:nth-of-type(2)').value || 0;
+							sets.push({reps: parseInt(reps), weight: parseFloat(weight)});
+						});
+						exercisesData.push({name: exerciseName, type: 'resistance', sets});
+					} else {
+						// cardio
+						const cardioInputs = labelsContainer.querySelectorAll('.cardioInput');
+						const distance = cardioInputs[0]?.value || 0;
+						const time = cardioInputs[1]?.value || 0;
+						const avgPace = cardioInputs[2]?.value || 0;
 
-			if (type === 'resistance') {
-				const sets = [];
-				wrapper.querySelectorAll('.setRow').forEach(row => {
-				const reps = row.querySelector('input[type="number"]:nth-of-type(1)').value || 0;
-				const weight = row.querySelector('input[type="number"]:nth-of-type(2)').value || 0;
-				sets.push({ reps: parseInt(reps), weight: parseFloat(weight) });
+						exercisesData.push({
+							name: exerciseName,
+							type: 'cardio',
+							distance: parseFloat(distance),
+							time: parseFloat(time),
+							avgPace: parseFloat(avgPace),
+						});
+					}
 				});
-				exercisesData.push({ name: exerciseName, type: 'resistance', sets });
-			} else { // cardio
-			const cardioInputs = labelsContainer.querySelectorAll('.cardioInput');
-			const distance = cardioInputs[0]?.value || 0;
-			const time = cardioInputs[1]?.value || 0;
-			const avgPace = cardioInputs[2]?.value || 0;
 
-			exercisesData.push({
-				name: exerciseName,
-				type: 'cardio',
-				distance: parseFloat(distance),
-				time: parseFloat(time),
-				avgPace: parseFloat(avgPace)
+				const workoutData = {
+					date: formattedDate,
+					exercises: exercisesData,
+				};
+
+				sessionStorage.setItem('workoutData', JSON.stringify(workoutData));
+				console.log('Workout saved:', workoutData);
+				window.location.href = 'dashboard.html';
 			});
-		}
-
-			});
-
-			const workoutData = {
-			date: formattedDate,
-			exercises: exercisesData
-			};
-
-			sessionStorage.setItem('workoutData', JSON.stringify(workoutData));
-			console.log('Workout saved:', workoutData);
-			window.location.href = 'dashboard.html';
-		});
 		</script>
 		<script src="./js/navbar.js"></script>
 	</body>
