BUG: fixed food card not showing correctly when adding food from search results bug Feature: updated navbar on community page
* also added some margins on community page so buttons are closer
    (since buttons are set to fixed position, dragging the window size will cause issue, does it matter? THOUGHTS?)
* removed pixel-style fonts in most places, due to reability issue
* added border to navbar buttons, I personally like this way better but let me know if anyone disagree
* also added a prompt letting user know they've successfully added food (better FEEDBACK oh yeah)

--- a/mealTracking-setGoal.html
+++ b/mealTracking-setGoal.html
@@ -30,7 +30,7 @@
 			<a href="./mealTracking.html" class="navbar-link selected">Track a Meal</a>
 			<a href="./workout.html" class="navbar-link">Track a Workout</a>
 			<a href="./community.html" class="navbar-link">Community Page</a>
-			<a href="./createPost.html" class="navbar-link">Create a Post</a>
+			<a href="./community.html" class="navbar-link" id="createAPostBtn">Create a Post</a>
 		</div>
 
 		<!-- popup window for settings -->
@@ -169,6 +169,7 @@
 		</div>
 
 		<script src="./js/mealTracking-setGoal.js"></script>
+		<script src="./js/community.js"></script>
 		<script src="./js/navbar.js"></script>
 	</body>
 </html>
