--- a/mealTracking-addFood.html
+++ b/mealTracking-addFood.html
@@ -30,7 +30,7 @@
 			<a href="./mealTracking.html" class="navbar-link selected">Track a Meal</a>
 			<a href="./workout.html" class="navbar-link">Track a Workout</a>
 			<a href="./community.html" class="navbar-link">Community Page</a>
-			<a href="./createPost.html" class="navbar-link">Create a Post</a>
+			<a href="./community.html" class="navbar-link" id="createAPostBtn">Create a Post</a>
 		</div>
 
 		<!-- popup window for settings -->
@@ -170,6 +170,7 @@
 			</div>
 		</div>
 		<script src="./js/mealTracking-addFood.js"></script>
+		<script src="./js/community.js"></script>
 		<script src="./js/navbar.js"></script>
 	</body>
 </html>
