--- a/mealTracking.html
+++ b/mealTracking.html
@@ -31,7 +31,7 @@
 			<a href="./mealTracking.html" class="navbar-link selected">Track a Meal</a>
 			<a href="./workout.html" class="navbar-link">Track a Workout</a>
 			<a href="./community.html" class="navbar-link">Community Page</a>
-			<a href="./createPost.html" class="navbar-link">Create a Post</a>
+			<a href="./community.html" class="navbar-link" id="createAPostBtn">Create a Post</a>
 		</div>
 
 		<!-- popup window for settings -->
@@ -416,6 +416,7 @@
 		</main>
 		<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 		<script src="./js/mealTracking.js"></script>
+		<script src="./js/community.js"></script>
 		<script src="./js/navbar.js"></script>
 	</body>
 </html>
