double checked instruction, external JSON not allowed, changed from  using fetch to putting data in a designated .js file (for example foods)

--- a/mealTracking-addFood.html
+++ b/mealTracking-addFood.html
@@ -98,9 +98,9 @@
 
 		<!-- main add food section -->
 		<h2 class="welcome-msg">
-			<a href="/dashboard.html" class="breadcrumb-link">Dashboard</a>
+			<a href="./dashboard.html" class="breadcrumb-link">Dashboard</a>
 			>
-			<a href="/mealTracking.html" class="go-back-link">Track a Meal</a> >
+			<a href="./mealTracking.html" class="go-back-link">Track a Meal</a> >
 			<span>
 				Adding food to
 				<span class="welcome-msg-meal-type">xxx</span> for
@@ -171,6 +171,7 @@
 				</a>
 			</div>
 		</div>
+		<script src="./js/mealTracking-food-data.js"></script>
 		<script src="./js/mealTracking-addFood.js"></script>
 		<script src="./js/community.js"></script>
 		<script src="./js/navbar.js"></script>
