--- a/mealTracking-setGoal.html
+++ b/mealTracking-setGoal.html
@@ -98,9 +98,9 @@
 
 		<!-- main add food section -->
 		<h2 class="welcome-msg">
-			<a href="/dashboard.html" class="breadcrumb-link">Dashboard</a>
+			<a href="./dashboard.html" class="breadcrumb-link">Dashboard</a>
 			>
-			<a href="/mealTracking.html" class="go-back-link">Track a Meal</a>
+			<a href="./mealTracking.html" class="go-back-link">Track a Meal</a>
 			> Set Nutrition Goal
 		</h2>
 		<div class="content">
