--- a/mealTracking.html
+++ b/mealTracking.html
@@ -98,7 +98,7 @@
 		<div class="overlay" id="overlay"></div>
 
 		<!-- main mealTracking section -->
-		<h2 class="welcome-msg"><a href="/dashboard.html" class="breadcrumb-link">Dashboard</a> > Track a Meal</h2>
+		<h2 class="welcome-msg"><a href="./dashboard.html" class="breadcrumb-link">Dashboard</a> > Track a Meal</h2>
 		<main class="app">
 			<div class="overview">
 				<div class="date-container">
@@ -115,7 +115,7 @@
 						<div class="meal-section meal-section-header">
 							<div class="meal-header-text-title">Breakfast</div>
 							<div>
-								<img src="/images/mealTracking/meal-logo/breakfast.png" alt="breakfast logo" class="meal-logo-img" />
+								<img src="./images/mealTracking/meal-logo/breakfast.png" alt="breakfast logo" class="meal-logo-img" />
 								<div class="meal-header-text">
 									<p class="meal-header-text-calory-summary">
 										<span class="meal-header-text-calory-count">0</span> cals
@@ -169,7 +169,7 @@
 						<div class="meal-section meal-section-header">
 							<div class="meal-header-text-title">Lunch</div>
 							<div>
-								<img src="/images/mealTracking/meal-logo/lunch.png" alt="lunch logo" class="meal-logo-img" />
+								<img src="./images/mealTracking/meal-logo/lunch.png" alt="lunch logo" class="meal-logo-img" />
 								<div class="meal-header-text">
 									<p class="meal-header-text-calory-summary">
 										<span class="meal-header-text-calory-count">0</span> cals
@@ -222,7 +222,7 @@
 						<div class="meal-section meal-section-header">
 							<div class="meal-header-text-title">Dinner</div>
 							<div>
-								<img src="/images/mealTracking/meal-logo/dinner.png" alt="dinner logo" class="meal-logo-img" />
+								<img src="./images/mealTracking/meal-logo/dinner.png" alt="dinner logo" class="meal-logo-img" />
 								<div class="meal-header-text">
 									<p class="meal-header-text-calory-summary">
 										<span class="meal-header-text-calory-count">0</span> cals
@@ -274,7 +274,7 @@
 						<div class="meal-section meal-section-header">
 							<div class="meal-header-text-title">Snacks</div>
 							<div>
-								<img src="/images/mealTracking/meal-logo/snacks.png" alt="snacks logo" class="meal-logo-img" />
+								<img src="./images/mealTracking/meal-logo/snacks.png" alt="snacks logo" class="meal-logo-img" />
 								<div class="meal-header-text">
 									<p class="meal-header-text-calory-summary">
 										<span class="meal-header-text-calory-count">0</span> cals
